--- a/css/temp.css
+++ b/css/temp.css
@@ -3333,6 +3333,7 @@ a.fancybox-button img {
   font-weight: bold;
   margin-left: -23px;
   margin-top: 15px;
+  font-size: 20px;
   width: 260px;
   text-align: center;
 }
