--- a/css/temp.css
+++ b/css/temp.css
@@ -131,6 +131,16 @@ h3 {
   font-size: 24px;
   margin-bottom: 20px;
 }
+.demolition h3{
+  margin-bottom: 5px;
+}
+.garbage_subtittle{
+  font-size:22px;
+  font-weight: bold;
+  text-align: left;
+  line-height: 155%;
+  margin-bottom: 5px;
+}
 
 
 h4 {
@@ -1173,9 +1183,14 @@ img.oplata:hover {
 
 
 .tabs {
-  margin: 0 0 30px;
+  margin: 0 0 0px;
 }
-
+.zero_discription{
+  color: #b37b64;
+  font-size: 14px;
+  font-weight: bold;
+  text-align: center;
+}
 .tabs__caption,
 .tabs__caption2 {
   display: flex;
@@ -1466,6 +1481,15 @@ ul.krohi li:first-child a span {
   border-right: 1px solid #dddddd;
   vertical-align: bottom;
 }
+.table>thead>tr>th{
+  background: #b39364;
+  border-top: 1px solid #dddddd;
+  color: #ffffff;
+  padding: 12px 10px;
+  text-align: center;
+  font-weight: normal;
+  font-size: 17px;
+}
 
 .b50 tr:first-child td {
   border-top: 1px solid #b39364;
@@ -1505,13 +1529,19 @@ table.table p {
 }
 
 .b50 tr:first-child {
-  background: #1467AD !important;
+  background: #b39364 !important;
   color: #fff;
   font-size: 16px;
 }
 
 .b50 tr:first-child:hover {
-  background: #1467AD !important;
+  background: #b39364 !important;
+}
+.garbage_sale{
+  font-size: 16px;
+}
+.garbage_demon, .garbage_nodemon{
+  font-size: 16px;
 }
 
 table.b50 p {
@@ -1898,8 +1928,8 @@ body .plan_table a.b24-web-form-popup-btn-5.sd {
   }
 
   #content {
-    margin-top: -25px;
-    margin-bottom: 50px;
+    margin-top: 10px;
+    margin-bottom: 0px;
   }
 
   a[id*="lk"] {
@@ -2370,6 +2400,9 @@ body .plan_table a.b24-web-form-popup-btn-5.sd {
 
   .table thead tr th:nth-child(1) {
     display: block
+  }
+  .table.crosshair thead {
+    display:none
   }
 
 
@@ -3215,6 +3248,11 @@ input {
   }
 
 }
+@media (max-width: 991px) {
+  h2.garbage_tittle{
+    padding-left: 15px;
+  }
+}
 
 @media (max-width: 750px) {
   .home h1 {
@@ -3291,11 +3329,15 @@ input {
   section h2 {
     font-size: 26px;
   }
+  
 
   .home h1 {
     font-size: 26px;
     margin: 30px 0 20px 0;
     line-height: 35px;
+  }
+  h2.garbage_tittle{
+    margin-bottom: 10px;
   }
 }
 
