--- a/css/temp.css
+++ b/css/temp.css
@@ -131,11 +131,13 @@ h3 {
   font-size: 24px;
   margin-bottom: 20px;
 }
-.demolition h3{
+
+.demolition h3 {
   margin-bottom: 5px;
 }
-.garbage_subtittle{
-  font-size:22px;
+
+.garbage_subtittle {
+  font-size: 22px;
   font-weight: bold;
   text-align: left;
   line-height: 155%;
@@ -1185,12 +1187,14 @@ img.oplata:hover {
 .tabs {
   margin: 0 0 0px;
 }
-.zero_discription{
+
+.zero_discription {
   color: #b37b64;
   font-size: 14px;
   font-weight: bold;
   text-align: center;
 }
+
 .tabs__caption,
 .tabs__caption2 {
   display: flex;
@@ -1301,7 +1305,8 @@ ul.tabs__caption2 {
   margin-top: -10px;
   font-weight: bold;
 }
-.table_subtittle span{
+
+.table_subtittle span {
   margin-bottom: 0px;
   color: #b37b64;
   font-size: 14px;
@@ -1481,7 +1486,8 @@ ul.krohi li:first-child a span {
   border-right: 1px solid #dddddd;
   vertical-align: bottom;
 }
-.table>thead>tr>th{
+
+.table>thead>tr>th {
   background: #b39364;
   border-top: 1px solid #dddddd;
   color: #ffffff;
@@ -1537,10 +1543,13 @@ table.table p {
 .b50 tr:first-child:hover {
   background: #b39364 !important;
 }
-.garbage_sale{
+
+.garbage_sale {
   font-size: 16px;
 }
-.garbage_demon, .garbage_nodemon{
+
+.garbage_demon,
+.garbage_nodemon {
   font-size: 16px;
 }
 
@@ -2401,8 +2410,9 @@ body .plan_table a.b24-web-form-popup-btn-5.sd {
   .table thead tr th:nth-child(1) {
     display: block
   }
+
   .table.crosshair thead {
-    display:none
+    display: none
   }
 
 
@@ -3171,6 +3181,136 @@ input {
   text-decoration: none;
 }
 
+.contact_flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.contact_flex_item {
+  width: calc(100%/3 - 15px);
+  height: 250px;
+  background: linear-gradient(to bottom, rgba(254, 254, 254, 1) 0%, rgba(239, 239, 239, 1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fefefe', endColorstr='#efefef', GradientType=0);
+  border: 1px solid #e4e4e4;
+  border-radius: 3px;
+}
+
+.contact h3 {
+  font-size: 26px;
+  color: #222;
+  text-align: center;
+  font-weight: bold;
+  margin-top: 75px;
+  margin-bottom: 35px;
+}
+
+.contact_subtittle {
+  font-size: 20px;
+  color: #222;
+  font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 35px;
+}
+
+.contact b {
+  margin-bottom: 5px;
+  display: block;
+}
+
+.contact span {
+  margin-bottom: 5px;
+  display: block;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.contact_form form {
+  border: 1px solid #6491b3;
+  border-radius: 3px;
+  padding: 40px 30px;
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.contact_form_subtittle {
+  color: #222;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  max-width: 800px;
+  margin: -15px auto 45px auto;
+}
+
+.contact_form_flex {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+}
+
+.contact_form_flex_input {
+  width: calc(50% - 20px);
+}
+
+.contact_form textarea {
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid #B39364;
+  padding: 15px;
+  height: 253px;
+  box-sizing: border-box;
+}
+
+.contact_form span {
+  display: block;
+  margin-bottom: 10px;
+  color: #333;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.contact_form .contact_form__input {
+  display: block;
+  height: 55px;
+  width: 100%;
+  border-radius: 3px;
+  border: 1px solid #B39364;
+  margin-bottom: 20px;
+  padding: 0 15px;
+}
+
+.contact_form .contact_form__button {
+  color: #fff;
+  height: 55px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  border: 1px solid #b37b64;
+  background-color: #b39364;
+  font-size: 18px;
+  font-weight: bold;
+  margin-top: 36px;
+  border-radius: 3px;
+}
+
+.contact_form_confi {
+  color: #b37b64;
+  font-weight: bold;
+  font-size: 14px;
+  margin-top: 15px;
+  text-align: center;
+}
+
+.contact_last strong {
+  font-size: 18px;
+  color: #222;
+}
+
+.contact_last p {
+  font-size: 18px;
+  color: #777;
+}
+
 @media (max-width: 1200px) {
   .container {
     width: auto !important;
@@ -3219,6 +3359,10 @@ input {
     font-size: 30px;
   }
 
+  section.contact_form h2 {
+    text-align: center;
+  }
+
   .home h1 {
     font-size: 35px;
     margin: 50px 0 30px 0;
@@ -3247,9 +3391,14 @@ input {
     width: 400px;
   }
 
+  .contact_flex_item {
+    height: 150px;
+  }
+
 }
+
 @media (max-width: 991px) {
-  h2.garbage_tittle{
+  h2.garbage_tittle {
     padding-left: 15px;
   }
 }
@@ -3323,21 +3472,92 @@ input {
     font-size: 16px;
     margin-bottom: 40px;
   }
+
+  .contact_form_flex {
+    flex-direction: column;
+  }
+
+  .contact_form_flex_input {
+    width: 100%;
+  }
+
+  .contact_form textarea {
+    height: 100px;
+    margin-bottom: 30px;
+  }
+
+  .contact_flex {
+    flex-direction: column;
+  }
+
+  .contact_flex_item {
+    width: 100%;
+    margin-bottom: 15px;
+    height: 190px;
+  }
 }
 
 @media (max-width: 440px) {
   section h2 {
     font-size: 26px;
   }
-  
+
 
   .home h1 {
     font-size: 26px;
     margin: 30px 0 20px 0;
     line-height: 35px;
   }
-  h2.garbage_tittle{
+
+  h2.garbage_tittle {
     margin-bottom: 10px;
+  }
+
+  .contact_form form {
+    padding: 30px 10px;
+  }
+
+  .contact_form span {
+    margin-bottom: 5px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+
+  .contact_form textarea {
+    padding: 10px;
+    margin-bottom: 15px;
+    height: 80px;
+  }
+
+  .contact_form .contact_form__input {
+    height: 48px;
+    margin-bottom: 15px;
+    padding: 0 10px;
+  }
+
+  .contact_form .contact_form__button {
+    height: 48px;
+    font-size: 16px;
+    margin-top: 20px;
+  }
+
+  .contact_form_confi {
+    font-size: 12px;
+    margin-top: 10px;
+  }
+
+  .contact_form_subtittle {
+    margin: -15px auto 25px auto;
+  }
+
+  .contact_last strong,
+  .contact_last p {
+    font-size: 16px;
+  }
+  .contact_flex_item {
+    width: 100%;
+    margin-bottom: 10px;
+    height: 140px;
   }
 }
 
