--- a/css/temp.css
+++ b/css/temp.css
@@ -3599,9 +3599,27 @@ input {
   flex-wrap: wrap;
   padding: 0;
 }
+.foto_flex_box{
+  justify-content: space-between;
+}
+.foto_flex_box_link{
+  font-size: 16px;
+  font-weight: bold;
+  color: #b37b64;
+}
+.video_flex{
+  display: flex;
+  justify-content: space-between;
+}
 
 .foto_flex li {
   width: calc(100%/6 - 9px);
+  margin-bottom: 10px;
+  overflow: hidden;
+  margin-right: 10px;
+}
+.foto_flex_box li {
+  width: calc(100%/3 - 25px);
   margin-bottom: 10px;
   overflow: hidden;
   margin-right: 10px;
