--- a/css/temp.css
+++ b/css/temp.css
@@ -3554,6 +3554,7 @@ input {
   .contact_last p {
     font-size: 16px;
   }
+
   .contact_flex_item {
     width: 100%;
     margin-bottom: 10px;
@@ -3599,17 +3600,42 @@ input {
   flex-wrap: wrap;
   padding: 0;
 }
-.foto_flex_box{
+
+.foto_flex_box {
   justify-content: space-between;
 }
-.foto_flex_box_link{
+
+.foto_flex_box_link {
   font-size: 16px;
   font-weight: bold;
   color: #b37b64;
 }
-.video_flex{
+
+.video_flex {
   display: flex;
   justify-content: space-between;
+}
+
+.video_flex a {
+  display: flex;
+  flex-direction: column;
+  width: calc(50% - 40px);
+  text-decoration: none;
+}
+
+.video_flex a img {
+  width: 100%;
+  height: 300px;
+}
+.video_flex a span{
+  margin-top: 20px;
+  color: #222;
+  font-size: 18px;
+  line-height: 145%;
+ text-align: center;
+ max-width: 70%;
+ margin-left: auto;
+ margin-right: auto;
 }
 
 .foto_flex li {
@@ -3618,6 +3644,7 @@ input {
   overflow: hidden;
   margin-right: 10px;
 }
+
 .foto_flex_box li {
   width: calc(100%/3 - 25px);
   margin-bottom: 10px;
