--- a/css/temp.css
+++ b/css/temp.css
@@ -23,8 +23,9 @@ body {
   font-size: 15px;
   line-height: 150%;
   font-weight: normal;
-  
+
 }
+
 .table {
   scroll-margin: 100px;
 }
@@ -2614,6 +2615,11 @@ body .plan_table a.b24-web-form-popup-btn-5.sd {
     padding: 0;
   }
 
+  .video_flex {
+    flex-direction: column;
+  }
+
+ 
 }
 
 
@@ -3499,6 +3505,7 @@ input {
     margin-bottom: 15px;
     height: 190px;
   }
+  
 }
 
 @media (max-width: 440px) {
@@ -3631,15 +3638,16 @@ input {
   width: 100%;
   height: 300px;
 }
-.video_flex a span{
+
+.video_flex a span {
   margin-top: 20px;
   color: #222;
   font-size: 18px;
   line-height: 145%;
- text-align: center;
- max-width: 70%;
- margin-left: auto;
- margin-right: auto;
+  text-align: center;
+  max-width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .foto_flex li {
@@ -3741,6 +3749,17 @@ a.fancybox-button img {
   .foto_flex li:nth-child(4n) {
     margin-right: 0px;
   }
+  .video_flex a {
+    width: 100%;
+    margin-bottom: 35px;
+    height: 250px;
+  }
+  .video_flex a span {
+    margin-top: 10px;
+    font-size: 16px;
+    max-width: 100%;
+}
+
 }
 
 @media (max-width: 480px) {
