--- a/css/maximenuckmobile.css
+++ b/css/maximenuckmobile.css
@@ -105,7 +105,7 @@
 .mobilemaximenuck div.level1.maximenuck>a {
   padding-top: 7px;
   padding-bottom: 7px;
-  padding-left: 20px;
+  padding-left: 10px;
   margin-top: 0px;
   margin-right: 10px;
   margin-bottom: 0px;
@@ -120,7 +120,7 @@
 .mobilemaximenuck div.level1.maximenuck .maximenuck_item_mobile {
   padding-top: 7px;
   padding-bottom: 7px;
-  padding-left: 20px;
+  padding-left: 10px;
   margin-top: 0px;
   margin-right: 10px;
   margin-bottom: 0px;
@@ -134,6 +134,23 @@
   display: flex;
   align-items: center;
   cursor: pointer;
+}
+.maximenuck_body{
+  padding-left: 20px;
+  display: none;
+  padding-top: 10px;
+}
+.maximenuck_body a{
+  text-decoration: none;
+  color: #777;
+  font-size: 16px;
+  line-height: 150%;
+}
+.maximenuck.level1 svg{
+  transition: .3s;
+}
+.maximenuck.level1.open svg{
+ transform: rotate(180deg);
 }
 .mobilemaximenuck div.level1.maximenuck .maximenuck_item_mobile i{
   margin-left: 5px;
