--- a/css/temp.css
+++ b/css/temp.css
@@ -3382,7 +3382,11 @@ input {
   font-weight: bold;
   color: 18px;
 }
-
+.center_table{
+  margin-left: auto;
+  margin-right: auto;
+  float: initial;
+}
 @media (max-width: 1200px) {
   .container {
     width: auto !important;
