--- a/css/temp.css
+++ b/css/temp.css
@@ -2843,7 +2843,6 @@ body .plan_table .b24-web-form-popup-btn-5.sd {
 
   .block-zero img {
     float: none;
-    margin: 0 auto 15px;
     width: 95px;
     height: 73px;
     display: block;
@@ -3673,12 +3672,21 @@ input {
   color: #777777;
   margin-top: 10px;
 }
+.footer .col-md-12.col-xs-12.col-sm-12 {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 15px;
+}
 
 .foto_flex {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
   padding: 0;
+}
+.b-page__addition-item:last-child img {
+  width: 30px;
+  height: 30px;
 }
 
 .foto_flex_box {
@@ -3699,13 +3707,13 @@ input {
 .video_flex a {
   display: flex;
   flex-direction: column;
-  width: calc(50% - 40px);
+  width: calc(100%/3 - 20px);
   text-decoration: none;
 }
 
 .video_flex a img {
   width: 100%;
-  height: 300px;
+  height: 250px;
 }
 
 .video_flex a span {
@@ -3717,6 +3725,7 @@ input {
   max-width: 70%;
   margin-left: auto;
   margin-right: auto;
+  text-decoration: none;
 }
 
 .foto_flex li {
@@ -3794,6 +3803,17 @@ a.fancybox-button img {
   }
 }
 
+@media (max-width: 767px) {
+  .video_flex a {
+    width: 100%;
+    margin-bottom: 35px;
+  }
+  .video_flex a img {
+    width: 100%;
+    height: 350px;
+}
+}
+
 @media (max-width: 680px) {
   .wall_icon_box_item {
     width: calc(50% - 10px);
@@ -3821,7 +3841,10 @@ a.fancybox-button img {
   .video_flex a {
     width: 100%;
     margin-bottom: 35px;
-    height: 250px;
+    height: auto;
+  }
+  .video_flex a img{
+    height: auto;
   }
   .video_flex a span {
     margin-top: 10px;
